# obsidian-to-notion

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  config.yaml.example  migrate.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dependency-check.yml  release.yml
docs/: pre-commit-setup.md
scripts/: validate_ci_alignment.py
src/obsidian_to_notion/: __init__.py  config.py  main.py
src/obsidian_to_notion/notion/: __init__.py  client.py
src/obsidian_to_notion/parsers/: __init__.py  obsidian_parser.py
src/obsidian_to_notion/transformers/: __init__.py  wikilink_converter.py
src/obsidian_to_notion/utils/: __init__.py  error_handling.py  progress.py
test_vault/: TestNote.md  WikiLink.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  environment.py
tests/integration/features/: error_logging.feature  metadata_mapping.feature  migration_orchestrator.feature  notion_client.feature  obsidian_parser.feature  pre_commit_validation.feature  readme_documentation.feature  text_splitting.feature  wikilink_converter.feature
tests/integration/steps/: error_logging_steps.py  metadata_mapping_steps.py  migration_orchestrator_steps.py  notion_client_steps.py  obsidian_parser_steps.py  pre_commit_steps.py  readme_documentation_steps.py  text_splitting_steps.py  wikilink_converter_steps.py
tests/integration/unit/: test_error_logging.py  test_readme_validation.py
tests/unit/: __init__.py  test_config.py  test_error_handling.py  test_main.py  test_metadata_mapping.py  test_notion_client.py  test_obsidian_parser.py  test_pre_commit_setup.py  test_progress.py  test_progress_tracker.py  test_readme_validation.py  test_text_splitting.py  test_wikilink_converter.py  test_wikilink_converter_new.py
