[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-to-notion"
version = "1.0.0"
description = "Migration utility for Obsidian vaults to Notion databases"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "notion-client==2.3.0",
    "tqdm==4.66.1",
    "PyYAML==6.0.1",
    "python-dotenv==1.0.0",
    "python-frontmatter==1.1.0",
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
obsidian-to-notion = "src.obsidian_to_notion.main:main"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "coverage>=7.0",
    "behave>=1.2.6",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "coverage>=7.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.0",
    "behave>=1.2.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obsidian_to_notion = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = []

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
fail_under = 80

[tool.coverage.xml]
output = "coverage.xml"

# [tool.isort] - Deprecated: Using ruff for import sorting
# profile = "black"
# line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["obsidian_to_notion"]
